samples/_failures_safe/1761393916_e49843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c66c4ab.c: In function ‘main’:
./samples/SAFE/__tmp_8c66c4ab.c:184:12: error: missing terminating " character
  184 |     printf("
      |            ^
./samples/SAFE/__tmp_8c66c4ab.c:184:5: error: expected expression at end of input
  184 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_8c66c4ab.c:184:5: error: expected declaration or statement at end of input
